K8s-Starter/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "todo.omsent.in"
    http:
      paths:
      - pathType: Prefix
        path: /sample-1
        backend:
          service:
            name: sample-1
            port:
              number: 3000
  - host: "omsent.in"
    http:
      paths:
      - pathType: Prefix
        path: /sample-2
        backend:
          service:
            name: sample-2
            port:
              number: 3000
  - host: "jenkins.omsent.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-3
            port:
              number: 3000
  - host: "api.omsent.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-4
            port:
              number: 3000
